--- a/config.toml
+++ b/config.toml
@@ -55,7 +55,6 @@ logo_footer = "images/sowatech2003.png"
 mobile = "+49 261 291850"
 quick_contact = false
 search = false
-social = ["https://www.facebook.com/sowatech.de/"]
 top_header = true
 [params.map]
 enable = true
@@ -102,3 +101,6 @@ preloader = ""
 enable = false
 mailchimp_form_action = "https://gmail.us4.list-manage.com/subscribe/post?u=463ee871f45d2d93748e77cad&amp;id=a0a2c6d074"
 mailchimp_form_name = "b_463ee871f45d2d93748e77cad_a0a2c6d074"
+[[params.social]]
+icon = "fa-facebook"
+URL = "https://www.facebook.com/sowatech.de/"
