--- a/themes/bexar-hugo/netlify.toml
+++ b/themes/bexar-hugo/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-  publish = "exampleSite/public"
-  command = "cd exampleSite && hugo --gc --themesDir ../.."
+  publish = "public"
+  command = "hugo --gc --themesDir ../.."
   
 [build.environment]
   HUGO_VERSION = "0.60.1"
