--- a/config.toml
+++ b/config.toml
@@ -51,7 +51,7 @@ description = "This is meta description"
 email = "info@sowatech.de"
 google_analitycs_id = ""
 logo = "images/sowatech2003.png"
-logo_footer = "images/sowatech2003.png"
+logo_footer = "images/sowatech2003_white.png"
 mobile = "+49 261 291850"
 quick_contact = false
 search = false
