--- a/config.toml
+++ b/config.toml
@@ -47,7 +47,7 @@ home = ["HTML", "RSS", "JSON"]
 address = "Im Teichert 110A, 56076 Koblenz"
 author = "Sowatech"
 contact_form_action = "#"
-description = "This is meta description"
+description = "Von unserem Standort in Koblenz bietet Sowatech individuelle Softwareentwicklung und Datenbankentwicklung von Web-, Mobil- und Desktop-Applikationen."
 email = "info@sowatech.de"
 google_analitycs_id = ""
 logo = "images/sowatech2003.png"
